crates/vize_glyph/src/snapshots/vize_glyph__style__tests__format_nested_css_at_rule.snap
---
source: crates/vize_glyph/src/style.rs
expression: result.as_str()
---
@media (min-width: 640px) {
  .container {
    color: red;
  }
}
