crates/vize_glyph/src/snapshots/vize_glyph__style__tests__format_simple_css.snap
---
source: crates/vize_glyph/src/style.rs
expression: result.as_str()
---
.container {
  color: red;
  display: flex;
  gap: 8px;
}
